--- a/src/widget-monitor/package.json
+++ b/src/widget-monitor/package.json
@@ -24,6 +24,7 @@
     "darkskyapi-ts": "^1.0.6",
     "dvbjs": "^6.0.1",
     "rxjs": "~6.6.0",
+    "skycons-ts": "^0.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
