--- a/src/widget-monitor/package.json
+++ b/src/widget-monitor/package.json
@@ -21,8 +21,10 @@
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.4",
     "darkskyapi-ts": "^1.0.6",
     "dvbjs": "^6.0.1",
+    "ng2-charts": "^2.4.3",
     "rxjs": "~6.6.0",
     "skycons-ts": "^0.2.0",
     "tslib": "^2.3.0",
