--- a/src/widget-monitor/src/assets/widget-config.json
+++ b/src/widget-monitor/src/assets/widget-config.json
@@ -9,6 +9,14 @@
         "id": "33000043",
         "name": "Blasewitzer / Fetscherstr."
       }
-    ]
+    ],
+    "timeOffset": 0
+  },
+  "weather": {
+    "latitude": 51.0504088,
+    "longitude": 13.7372621
+  },
+  "stock": {
+    "symbol": "NDAQ"
   }
 }
