--- a/widget-monitor/package.json
+++ b/widget-monitor/package.json
@@ -28,6 +28,7 @@
     "chart.js": "^2.9.4",
     "darkskyapi-ts": "^1.0.6",
     "dvbjs": "^6.0.1",
+    "jest-preset-angular": "^10.0.1",
     "ng2-charts": "^2.4.3",
     "rxjs": "~6.6.0",
     "skycons-ts": "^0.2.0",
