added mockData Input for Stock Widget

--- a/widget-monitor/src/assets/widget-config.json
+++ b/widget-monitor/src/assets/widget-config.json
@@ -19,6 +19,7 @@
   "stock": {
     "symbol": "AAPL,MSFT,AAPL",
     "interval": "1d",
-    "range": "1mo"
+    "range": "1mo",
+    "mockData": true
   }
 }
