--- a/widget-monitor/package.json
+++ b/widget-monitor/package.json
@@ -28,7 +28,6 @@
     "chart.js": "^2.9.4",
     "darkskyapi-ts": "^1.0.6",
     "dvbjs": "^6.0.1",
-    "jest-preset-angular": "^10.0.1",
     "ng2-charts": "^2.4.3",
     "rxjs": "~6.6.0",
     "skycons-ts": "^0.2.0",
@@ -36,6 +35,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-builders/jest": "^12.1.2",
     "@angular-devkit/build-angular": "~12.2.8",
     "@angular/cli": "~12.2.8",
     "@angular/compiler-cli": "~12.2.0",
@@ -45,15 +45,20 @@
     "@storybook/addon-actions": "^6.3.10",
     "@storybook/addon-essentials": "^6.3.10",
     "@storybook/addon-links": "^6.3.10",
+    "@storybook/addon-storyshots": "^6.3.12",
     "@storybook/angular": "^6.3.10",
     "@storybook/builder-webpack5": "^6.3.10",
     "@storybook/manager-webpack5": "^6.3.10",
     "@types/jasmine": "~3.8.0",
+    "@types/jest": "^27.0.2",
     "@types/node": "^12.11.1",
     "@webcomponents/custom-elements": "^1.5.0",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.10.2",
+    "glob": "^7.2.0",
     "jasmine-core": "~3.8.0",
+    "jest": "^27.3.1",
+    "jest-preset-angular": "^10.0.1",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
