--- a/widget-monitor/package.json
+++ b/widget-monitor/package.json
@@ -6,11 +6,15 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
     "storybook": "npm run docs:json && start-storybook -p 6006",
     "build-storybook": "npm run docs:json && build-storybook",
     "chromatic": "npx chromatic --project-token=34fa33e82a5b"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": ["<rootDir>/src/setupJest.ts"]
   },
   "private": true,
   "dependencies": {
@@ -28,6 +32,8 @@
     "chart.js": "^2.9.4",
     "darkskyapi-ts": "^1.0.6",
     "dvbjs": "^6.0.1",
+    "jest": "^27.3.1",
+    "jest-preset-angular": "^10.0.1",
     "ng2-charts": "^2.4.3",
     "rxjs": "~6.6.0",
     "skycons-ts": "^0.2.0",
@@ -50,20 +56,13 @@
     "@storybook/builder-webpack5": "^6.3.10",
     "@storybook/manager-webpack5": "^6.3.10",
     "@types/jasmine": "~3.8.0",
-    "@types/jest": "^27.0.2",
     "@types/node": "^12.11.1",
     "@webcomponents/custom-elements": "^1.5.0",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.10.2",
     "glob": "^7.2.0",
     "jasmine-core": "~3.8.0",
-    "jest": "^27.3.1",
-    "jest-preset-angular": "^10.0.1",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.5"
   }
 }
