--- a/widget-monitor/package.json
+++ b/widget-monitor/package.json
@@ -14,7 +14,16 @@
   },
   "jest": {
     "preset": "jest-preset-angular",
-    "setupFilesAfterEnv": ["<rootDir>/src/setupJest.ts"]
+    "setupFilesAfterEnv": ["<rootDir>/src/setupJest.ts"],
+    "transformIgnorePatterns": [
+      "<rootDir>/node_modules/(?!(@storybook/addon-docs))"
+    ],
+    "moduleNameMapper": {
+      "jest-preset-angular/build/setup-jest": "jest-preset-angular/setup-jest",
+      "jest-preset-angular/build/AngularNoNgAttributesSnapshotSerializer": "jest-preset-angular/build/serializers/no-ng-attributes",
+      "jest-preset-angular/build/AngularSnapshotSerializer": "jest-preset-angular/build/serializers/ng-snapshot",
+      "jest-preset-angular/build/HTMLCommentSerializer": "jest-preset-angular/build/serializers/html-comment"
+    }
   },
   "private": true,
   "dependencies": {
