--- a/widget-monitor/package.json
+++ b/widget-monitor/package.json
@@ -14,7 +14,9 @@
   },
   "jest": {
     "preset": "jest-preset-angular",
-    "setupFilesAfterEnv": ["<rootDir>/setupJest.ts"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupJest.ts"
+    ],
     "transformIgnorePatterns": [
       "<rootDir>/node_modules/(?!(@storybook/addon-docs))"
     ],
@@ -61,6 +63,7 @@
     "@storybook/addon-essentials": "^6.3.10",
     "@storybook/addon-links": "^6.3.10",
     "@storybook/addon-storyshots": "^6.3.12",
+    "@storybook/addon-storyshots-puppeteer": "^6.3.12",
     "@storybook/angular": "^6.3.10",
     "@storybook/builder-webpack5": "^6.3.10",
     "@storybook/manager-webpack5": "^6.3.10",
